# veridion

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  action.yml  netlify.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  hosted-image.yml  hosted-producer.yml  rdi-pr-comment.yml  release.yml  smoke-rdi.yml
db/migrations/: 000_schema_migrations.sql  001_decision_events.sql  002_materialization_runs.sql  003_catalog_models.sql  004_control_plane_state.sql
docs/: AUTOMATION_GUIDE.md  AWS.md  DECISION_HISTORY.md  DECK_OUTLINE.md  DESIGN_PARTNER.md  EVALUATION_CHECKLIST.md  EVALUATION_GUIDE.md  EXECUTION_PLAN.md  GITLAB.md  HOSTED.md  NON_GITHUB.md  ONE_PAGER.md  OPERATIONAL_CONTEXT.md  POLICY_SIMULATION.md  POSTGRES.md  QUICKSTART.md  SAAS.md  SCREENSHOT_GUIDE.md  TESTING_STRATEGY.md
docs/roadmap/: MILESTONES.md
examples/aws/: build-athena-queries.sh  build-push-ecr.sh  history-service.config.json  ingest-history-store.sh  materialize-history.sh  migrate-history-store.sh  replay-s3-history.sh  run-history-scheduler.sh  run-history-service.sh  sample-decision-event.json  test-s3-sink.sh
examples/gitlab/: .gitlab-ci.yml
examples/hosted/: docker-compose.postgres.yml  history-service.jwt.config.json  history-service.saas.config.json  history-service.trusted-header.config.json  ingest-decision-event.sh  jwks.json  nginx-trusted-proxy.conf  pagerduty-end-to-end.sh  start-history-migrate.sh  start-history-scheduler.sh  start-history-service.sh
examples/non-github/: build-operational-context.sh  build-runtime-context.sh  fetch-runtime-context.sh
examples/policy/: veridion-policy.yaml
examples/policy-packs/: application-team.yaml  platform-team.yaml  regulated-service.yaml
examples/trust/: trust-catalog.source.json  trust-profile.source.json
examples/workflows/: deploy-gate.yml  rdi.yml
infra/terraform/aws-hosted-alpha/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
site/: index.html  styles.css
site/docs/: index.html
site/docs/checklist/: index.html
site/docs/design-partner/: index.html
src/veridion/: __init__.py  constants.py  decision_contract.py  summarization.py  suppression.py
tests/: README.md
tests/contract/: test_diff_parser.py  test_diff_parser_edge_cases.py  test_grype_normalization.py  test_semgrep_normalization.py  test_syft_normalization.py  test_trivy_normalization.py
tests/integration/: test_action_runner.py
tests/unit/: test_action_runner_errors.py  test_ai_attribution.py  test_analysis_bundle.py  test_analysis_dedup.py  test_athena_queries.py  test_baseline_compare.py  test_baseline_dedup_cross_source.py  test_bootstrap.py  test_constants.py  test_decision_contract.py  test_decision_event.py  test_decision_history.py  test_decision_history_config.py  test_decision_history_export.py  test_decision_history_materialize.py  test_decision_history_scheduler.py  test_decision_history_service.py  test_decision_history_store.py  test_decision_sinks.py  test_diff_parser_classification.py  test_event_emitter.py  test_github_approval_state.py  test_github_approvals.py  test_github_comment.py  test_github_comment_errors.py  test_gitlab_merge_request_metadata.py  test_gitlab_note.py  test_historical_signals.py  test_history_identity.py  test_metadata_builder.py  test_normalize_common.py  test_normalize_dispatch.py  test_normalized_finding.py  test_operational_context_artifact.py  test_operational_context_builder.py  test_policy_engine.py  test_policy_pack.py  test_policy_simulator.py  test_pr_comment.py  test_pr_lifecycle.py  (+11 more)
(+84 files in other folders)
