[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veridion"
version = "0.1.0"
description = "Operational trust infrastructure for autonomous engineering systems."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Veridion" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
