[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veridion"
version = "0.1.0"
description = "Operational trust infrastructure for autonomous engineering systems."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
  { name = "Veridion" }
]
keywords = ["release-decision", "devsecops", "security", "github-actions", "ci", "policy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Security",
]
dependencies = []

[project.urls]
Homepage = "https://getveridion.com"
Documentation = "https://getveridion.com/docs/"
Repository = "https://github.com/veridionhq/veridion"
"Bug Tracker" = "https://github.com/veridionhq/veridion/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
aws = [
  "boto3>=1.34",
]
gcp = [
  "google-cloud-bigquery>=3.25",
  "google-cloud-pubsub>=2.21",
]
db = [
  "psycopg[binary]>=3.2",
  "snowflake-connector-python>=3.12",
]
events = [
  "kafka-python>=2.0",
]
cloud = [
  "boto3>=1.34",
  "google-cloud-bigquery>=3.25",
  "google-cloud-pubsub>=2.21",
]
all = [
  "boto3>=1.34",
  "google-cloud-bigquery>=3.25",
  "google-cloud-pubsub>=2.21",
  "psycopg[binary]>=3.2",
  "snowflake-connector-python>=3.12",
  "kafka-python>=2.0",
]

[project.scripts]
veridion-bootstrap = "veridion.action.bootstrap:main"
veridion-rdi = "veridion.action.runner:main"
veridion-build-trust-profile = "veridion.action.trust_profile_builder:main"
veridion-build-operational-context = "veridion.action.operational_context_builder:main"
veridion-build-runtime-context = "veridion.action.runtime_context_builder:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
